fixed alignment

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: "Lato", sans-serif !important;
 	font-weight: 900 !important;
 }
+.ul-nemo{
+	margin-left:0px !important;
+}
 
 .wrapper {
 	background: #E3E3E3;
@@ -36,6 +39,47 @@ h1, h2, h3, h4, h5, h6 {
 .my-button:hover {
 	cursor: pointer;
 	padding: .8em 2.7em;
+}
+
+@media only screen and (min-width: 301px) and (max-width: 331px){
+	.my-button {
+		font-size: 14px;
+		line-height: normal;
+		text-transform: uppercase;
+		font-family: 'Lato', sans-serif;
+		font-weight: 900;
+		-webkit-transition: all .3s ease-in-out;
+		transition: all .3s ease-in-out, color 0.2s 0.3s;
+		letter-spacing: 0;
+		border-radius: 45px;
+		height: auto;
+		padding: .8em 2.1em;
+}
+
+.my-button:hover {
+	cursor: pointer;
+	padding: .8em 2.7em;
+}
+}
+@media only screen and (max-width: 300px){
+	.my-button {
+		font-size: 12px;
+		line-height: normal;
+		text-transform: uppercase;
+		font-family: 'Lato', sans-serif;
+		font-weight: 900;
+		-webkit-transition: all .3s ease-in-out;
+		transition: all .3s ease-in-out, color 0.2s 0.3s;
+		letter-spacing: 0;
+		border-radius: 45px;
+		height: auto;
+		padding: .8em 2.1em;
+}
+
+.my-button:hover {
+	cursor: pointer;
+	padding: .8em 2.7em;
+}
 }
 
 .my-button:active,
